--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
+sudo: false
+
 language: node_js
+
+notifications:
+  email:
+    on_success: never
+    on_failure: change
+
 node_js:
-  - '0.10'
+  - "stable"
+
+after_script:
+  - npm install coveralls@2
+  - cat ./coverage/lcov.info | coveralls
